# distributed-lecture-example

./: .gitignore  Cargo.toml  README.md  build.rs
proto/: work.proto
